2025-02-27 - v 0.9.0
====================

* The plugin now filters out all unauthorized labels from the "Labels" fields
  in the responses of these API routes:
  - /tools/find
  - /studies/{id} & similar routes
  - /studies/{id}/series & similar routes
  - /series/{id}/study & similar routes
  - /series/{id}/labels & similar routes
  In the past, this was only done in /tools/labels
* Allow using the auth-plugin together with "AuthenticationEnabled": true.
  https://discourse.orthanc-server.org/t/user-based-access-control-with-label-based-resource-access/5454
* Added a default permission for /auth/tokens/volview-viewer-publication
* New standard configuration "volview"


2025-01-22 - v 0.8.2
====================

* Fix forbidden access when the PatientID and StudyInstanceUID are identical.
* Fix an error when WebServiceSettingsRolesUrl is not defined.
* Now handling /tools/count-resources API route.
* New standard configuration "volview" although Volview is not yet ready to support
  the token: https://github.com/Kitware/VolView/issues/689


2024-07-03 - v 0.8.1
====================

* Fix internal error when the auth-service was not configured to implement the role/permission API


2024-06-27 - v 0.8.0
====================

* Added support for roles/permissions edition:
  - new configuration "WebServiceSettingsRolesUrl"
  - new API routes:
    - /auth/settings/roles (GET/PUT)
    - /auth/settings/permissions (GET)
* Fix wrong access to POST /instances that was considered as a resource list.


2024-05-16 - v 0.7.2
====================

* Fix wrong forbidden access to /dicom-web/studies/../series for users who 
  had "authorized_labels"=="*"
* Added new default permissions for /tools/create-dicom, 
  /stl/encode-rtstruct, /stl/encode-nifti

2024-03-25 - v 0.7.1
====================

* Added missing parsing of /dicom-web/studies/.../instances
* Clarification: the "authorized_labels" field of the user profile
  is actually a list of studies authorized labels !  